update spacing and typography utilities; refactor ItemsTable and RecipesTable layout; add BaseInput

--- a/src/assets/design/table.css
+++ b/src/assets/design/table.css
@@ -1,6 +1,6 @@
-@import '../variables/spacing.css';
-@import '../variables/color.css';
-@import '../variables/borderRadius.css';
+@import './variables/spacing.css';
+@import './variables/color.css';
+@import './variables/borderRadius.css';
 
 table {
     border-radius: var(--br-medium);
