--- a/src/assets/design/variables/spacing.css
+++ b/src/assets/design/variables/spacing.css
@@ -1,9 +1,10 @@
 :root {
     --space-0: 0rem;
-    --space-1: .25rem;
-    --space-1_5: .375rem; 
-    --space-2: .5rem;
-    --space-3: .75rem;
+    --space-0_5: 0.125rem;
+    --space-1: 0.25rem;
+    --space-1_5: 0.375rem;
+    --space-2: 0.5rem;
+    --space-3: 0.75rem;
     --space-4: 1rem;
     --space-5: 1.5rem;
     --space-6: 2rem;
